Remove input from appearance none

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -83,7 +83,7 @@ img {
   border: 0;
 }
 
-input, button, textarea {
+button, textarea {
   -webkit-appearance: none; /*Safari/Chrome*/
  -moz-appearance: none; /*Firefox*/
  -ms-appearance: none; /*IE*/
